--- a/Frontend/www/index.html
+++ b/Frontend/www/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head lang="en">
@@ -30,18 +29,20 @@
             <div class="contact-2">
                 <a href="index.html">Піца</a>
             </div>
-            <div class="banner-top">
+        </div>
+        
+        <div class="banner-top">
                     <h5>PIZZA</h5>
                     <p>KMA</p>
                     <img src="assets/images/discount.svg">
-            </div>
-            <div class="banner-bottom">
-                <p>ЦЬОГО ТИЖНЯ НА ВСЕ</p>
-                <p>-20%</p>
-                <img src="assets/images/discount.svg">
-            </div>
+         </div>
+        <div class="banner-bottom">
+            <p>ЦЬОГО ТИЖНЯ НА ВСЕ</p>
+            <p class="points">.....................</p>
+            <p>-20%</p>
+            <img src="assets/images/discount.svg">
         </div>
-    
+
     <div class="row" id="pizza_list">
         <div class="col-sm-6 col-md-4">
             <div class="thumbnail pizza-card">                
