--- a/Frontend/www/index.html
+++ b/Frontend/www/index.html
@@ -80,7 +80,7 @@
         </div>
 
         <div class="row" id="pizza_list">
-            <div class="col-sm-6 col-md-4">
+            <div class=" col-ex-12 col-sm-6 col-md-4">
                 <div class="thumbnail pizza-card">                
                     <div class="banner-new">Нова</div>
                     <img src="assets/images/pizza_7.jpg">
@@ -118,7 +118,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-6 col-md-4">
+            <div class="col-ex-12  col-sm-6 col-md-4">
                 <div class="thumbnail pizza-card">
                     <div class="banner-popular">Популярна</div>
                     <img src="assets/images/pizza_2.jpg">
@@ -157,7 +157,7 @@
                 </div>
             </div>
 
-            <div class="col-sm-6 col-md-4">
+            <div class="col-ex-12 col-sm-6 col-md-4">
                 <div class="thumbnail pizza-card">
                     <img src="assets/images/pizza_1.jpg">
                     <div class="caption"><h3>Міксовий поло</h3>
@@ -195,7 +195,7 @@
                 </div>
             </div>
 
-            <div class="col-sm-6 col-md-4">
+            <div class="col-ex-12 col-sm-6 col-md-4">
                 <div class="thumbnail pizza-card">
                     <img src="assets/images/pizza_5.jpg">
                     <div class="caption"><h3>Сициліано</h3>
@@ -233,7 +233,7 @@
                 </div>
             </div>
 
-            <div class="col-sm-6 col-md-4">
+            <div class="col-ex-12 col-sm-6 col-md-4">
                 <div class="thumbnail pizza-card">
                     <img src="assets/images/pizza_3.jpg">
                     <div class="caption"><h3>Маргарита</h3>
@@ -258,7 +258,7 @@
                 </div>
             </div>
 
-                <div class="col-sm-6 col-md-4">
+                <div class="col-ex-12 col-sm-6 col-md-4">
                 <div class="thumbnail pizza-card">
                     <img src="assets/images/pizza_6.jpg">
                     <div class="caption"><h3>Мікс смаків</h3>
@@ -296,7 +296,7 @@
                 </div>
             </div>
 
-            <div class="col-sm-6 col-md-4">
+            <div class="col-ex-12 col-sm-6 col-md-4">
                 <div class="thumbnail pizza-card">
                     <img src="assets/images/pizza_8.jpg">
                     <div class="caption"><h3>Дольче Маре</h3>
@@ -321,7 +321,7 @@
                 </div>
             </div>
 
-            <div class="col-sm-6 col-md-4">
+            <div class="col-ex-12 col-sm-6 col-md-4">
                 <div class="thumbnail pizza-card">
                     <img src="assets/images/pizza_4.jpg">
                     <div class="caption"><h3>Россо Густо</h3>
